--- a/html/header.html
+++ b/html/header.html
@@ -7,15 +7,12 @@
         <img id="logo" src="../Resource/Resource/cukcuk-logo.png" alt="cukcuk-logo">
         </div>
         <div class="center-header">
-            <p id="namecompany">Nhà hàng Biển Đông</p>
-                  <button id="customDropdown" type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    
-                  </button>
-                  <div class="dropdown-menu" aria-labelledby="customDropdown">
-                    <span class="dropdown-menu-arrow"></span>
-                    <a class="dropdown-item" href="#" >Nhà hàng Biển Đông</a>
-                    <a class="dropdown-item" href="#">Nhà hàng Biển Tây</a>
-              </div>
+            <div id="namecompany">
+                <select id="nameres">
+                    <option>Nhà Hàng Biển Đông</option>
+                    <option>Nhà hàng Biển Tây</option>
+                </select>
+            </div>
         </div>
         <div class="right-header">
             <img id="avatar" src="../Resource/Resource/icon/avatar-default.png" alt="avatar">
