--- a/html/content.html
+++ b/html/content.html
@@ -15,6 +15,10 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <div id="addform"></div>
+                <div class="endform">
+                    <button class="btnend" style="background-color: #e5e5e5; border: none;" type="button">Hủy</button>
+                    <button class="btnend" style="background-color: #019160; color: white;" type="button"><i class="fa fa-floppy-o" style="margin-right: 8px; font-size: 16px;"></i>Lưu</button>
+                </div>
             </div>
         </div>
     </div>
