--- a/html/navbar.html
+++ b/html/navbar.html
@@ -34,6 +34,8 @@
         else
             $("#icon").removeClass("fa fa-angle-right").addClass("fa fa-angle-left");
     }
+    document.getElementById('menu').addEventListener("click", ministate);
+    document.getElementById('menu').addEventListener("click", changeicon);
     document.getElementById('mini').addEventListener("click", ministate);
     document.getElementById('mini').addEventListener("click", changeicon);
 </script>
