--- a/html/content.html
+++ b/html/content.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="content.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
     $(function () {
         $('#addform').load('addform.html');
@@ -9,7 +10,7 @@
 <div class="content">
     <div class="head-content">
         <p id="employee-list">Danh sách nhân viên</p>
-        <button id="buttonadd" type="button" onclick="openform()"><img src="../Resource/Resource/icon/add.png"
+        <button accesskey="a" id="buttonadd" type="button" onclick="openform()"><img src="../Resource/Resource/icon/add.png"
                 id="imgadd">Thêm Nhân
             Viên</button>
     </div>
@@ -25,8 +26,12 @@
         </div>
     </div>
     <div class="finder">
-        <input type="text" class="findtext" placeholder="Tìm kiếm theo Mã, Tên hoặc Số điện thoại"
-            onfocus="this.placeholder = ''" onblur="this.placeholder = 'Tìm kiếm theo Mã, Tên hoặc Số điện thoại'">
+        <div class="finder-findtext">
+            <input type="text" class="findtext" id="finder-findtext"
+                placeholder="Tìm kiếm theo Mã, Tên hoặc Số điện thoại" onfocus="this.placeholder = ''"
+                onblur="this.placeholder = 'Tìm kiếm theo Mã, Tên hoặc Số điện thoại'">
+            <div><i class="fa fa-times"></i></div>
+        </div>
         <div class="codeandname">
             <select class="findtext" style="color: black;">
                 <option>Tất cả phòng ban</option>
@@ -246,6 +251,14 @@
             modal.style.display = "block";
         }
     }
+    $(function () {
+        $(".fa.fa.fa-times").click(function () {
+            if ($("#finder-findtext").val != '') {
+                $("#finder-findtext").val("");
+            }
+        }
+        )
+    });
     btn.onclick = function () {
         modal.style.display = "block";
     }
@@ -259,10 +272,6 @@
         }
     }
 </script>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
