--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,6 @@
             $('#header').load('header.html');
             $('#navbar').load('navbar.html');
             $('#content').load('content.html');
-            $('#addform').load('addform.html');
         });
     </script>
     <title>ProJect Web</title>
@@ -24,6 +23,7 @@
         <div id="navbar"></div>
         <div id="content" style="width: 100%;"></div>
     </div>
+    <!-- <script src="../js/test.js" type="module"></script> -->
 </body>
 
 </html>
